[package]
name = "socks5-protocol-async"
version = "0.2.2"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "Async I/O SOCKS5 protocol implementation"
keywords = ["socks", "socks5", "async", "protocol", "proxy"]
categories = ["network-programming"]
license = "MIT"
repository = "https://github.com/MOZGIII/socks5-protocol-async"

[dependencies]
futures-io = "0.3"
futures-util = "0.3"
failure = "0.1"
enum-primitive-derive = "0.1"
num-traits = "0.2"

[dev-dependencies]
futures = "0.3"
futures-test = "0.3"
